# ML-compare

./: pyproject.toml
app/: components.py  main.py  utils.py
