[project]
name = "ml-compare"
version = "0.1.0"
description = "A streamlit app designed to help visualize and compare various machine learning algorithms and their hyper parameters interactively"
authors = [
    {name = "Zach Ip",email = "ip.zachary.t@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
