[project]
name = "ml-compare"
version = "0.1.0"
description = "A streamlit app designed to help visualize and compare various machine learning algorithms and their hyper parameters interactively"
authors = [
    {name = "Zach Ip",email = "ip.zachary.t@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.43.2,<2.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "mlxtend (>=0.23.4,<0.24.0)"
]

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
